Created Library Module

--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -3,22 +3,22 @@
 
     <item
         android:icon="@drawable/ic_android"
-        android:title="@null" />
+        android:title="A" />
 
     <item
         android:icon="@drawable/ic_android"
-        android:title="@null" />
+        android:title="B" />
 
     <item
         android:enabled="false"
-        android:title="@null" />
+        android:title="" />
 
     <item
         android:icon="@drawable/ic_android"
-        android:title="@null" />
+        android:title="D" />
 
     <item
         android:icon="@drawable/ic_android"
-        android:title="@null" />
+        android:title="E" />
 
 </menu>
