--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,25 +13,27 @@
         android:layout_gravity="center"
         android:text="Transform" />
 
-    <com.vadmax.fabbottomnavigationview.FabBottomNavigationView
+    <com.hirogakatageri.fabom.FabBottomNavigationView
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        app:fab_cradle_margin="8dp"
-        app:fab_cradle_rounded_corner_radius="8dp"
-        app:fab_size="50dp"
+        app:elevation="0dp"
+        app:fab_corner_radius="4dp"
+        app:fab_margin="8dp"
+        app:fab_size="48dp"
         app:itemIconTint="@android:color/white"
+        app:labelVisibilityMode="labeled"
         app:menu="@menu/menu_bottom_navigation" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:clickable="true"
         android:focusable="true"
+        app:fabCustomSize="48dp"
         app:layout_anchor="@id/bottomNavigationView"
-        app:layout_anchorGravity="fill_vertical|center_horizontal"
-        app:elevation="16dp" />
+        app:layout_anchorGravity="center_horizontal|top" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
